--- a/Pipfile
+++ b/Pipfile
@@ -5,8 +5,13 @@ name = "pypi"
 
 [packages]
 atri = "==0.0.78"
+fastapi = "==0.84.0"
+uvicorn = "*"
+jsonpickle = "*"
+python-multipart = "*"
+atri-utils = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.10"
+python_version = "3.11"
